--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mercalista">
+    package="be.galax.mercalista">
+   <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="mercalista"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Mercalista"
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
